--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -40,8 +40,8 @@ input:hover, .btn:hover {
 	color: white;
 }
 
-.twitter {
-	background-color: #55ACEE;
+.linkedin {
+	background-color: #0077B5;
 	color: white;
 }
 
